<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Suspend!</string>
    <string name="about">"This is the first version of Suspend. It is aimed at android drivers who wish to stop interruptions from their mobile phone while they are driving."</string>
    <string name="aboutsuspend">"As it is the first version, bugs are inevitable but if you do find a bug kindly contact me, una.hennessy4@mydit.ie with a synopsis of the bug and I will fix it as soon as possible"</string>
    <string name="aboutmore">"Remember, it only takes a few seconds of distraction to become a statistic! Don't lose concentration because of a tweet, text message or status update!"</string>
    <string name="aboutInfo">"Suspend! Version 1.0 Copyright ©2015"</string>
    <string name="agree_setup_info">"In order to use Suspend! Please accept the following Terms and Conditions:
        The Suspend! Application is an aid to distraction free driving. It has not been tested, approved or certified by the Irish Government or any private agency for use in connection with driving while using a phone. It is illegal to text or otherwise have your phone in your hand while you are driving in Ireland and if caught you may be sanctioned with penalty points or otherwise. It is up to you the driver to ensure you are focused on the road at all times and using this app does not preclude you from paying attention to the road.

        IF YOU AGREE WITH THESE TERMS AND CONDITIONS, PLEASE CLICK THE ACCEPT BUTTON."</string>
    <string name="default_message_to_reply">"I'm driving and can't respond just now. I will get back to you soon."</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="emergencyNo"><b>112 Emergency</b>" Are you sure you want to make an emergency call?"</string>
    <string name="gmail_pop_server">pop.gmail.com</string>
    <string name="gmail_pop_port">995</string>
    <string name="gmail_pop_security">SSL</string>
    <string name="gmail_imap_server">imap.gmail.com</string>
    <string name="gmail_imap_port">993</string>
    <string name="gmail_imap_security">SSL</string>
    <string name="gmail_smtp_server">smtp.gmail.com</string>
    <string name="gmail_smtp_port">465</string>
    <string name="gmail_smtp_security">SSL</string>
    <string name="helpInfo">"Activate Suspend! every time you drive for Distraction Free Driving!"</string>
    <string name="home_txt"><b> Thank you for downloading Suspend!, The app that helps you drive safely. 1st time in, click Agree button to set yourself up for distraction free driving"</b></string>
    <string name="home2_txt">"Click on About button to find out more on Suspend! "</string>
    <string name="home3_txt">Thanks for using Suspend! and for driving safely!</string>
    <string name="is_sms_enabled">"is_sms_enabled"</string>
    <string name="is_mms_enabled">"is_mms_enabled"</string>
    <string name="is_whatsapp_enabled">"is_whatsapp_enabled"</string>
    <string name="is_phone_enabled">"is_phone_enabled"</string>
    <string name="is_settings_setup_enabled">"is_settings_setup_enabled"</string>
    <string name="music_selection">Select your Music source for Quick Access.</string>
    <string name="musicQuickAccess"><b>Music Quick Access</b>"Please turn Suspend! "<b>OFF</b> to select your Music Source for Quick Access.</string>
    <string name="musicAppNotInstalled">No music applications installed.</string>
    <string name="musicUrlList">Tap to view music applications</string>
    <string name="navigation_selection">Select your Navigation source for Quick Access.</string>
    <string name="navigationQuickAccess"><b>Navigation Quick Access</b>"Please turn Suspend! "<b>OFF</b> to select your Navigation Source for Quick Access.</string>
    <string name="navAppNotInstalled">No navigation applications installed.</string>
    <string name="navUrlList">Tap to view navigation applications</string>
    <string name="no_WhatsAPP_message"><b>INFORMATION</b>"WhatsAPP is not configured on this phone. Please set up WhatsAPP first."</string>
    <string name="notification_text">"You have new notifications"</string>
    <string name="notification_text2">"new notifications"</string>
    <string name="on_popup_message">Suspend! status: <b>ON</b>" To exit the app and use your phone functions, turn off Suspend! by tapping On above."</string>
    <string name="off_popup_message">"Suspend! is now ready to use. Tap Off to turn it on. Obviously phone functionality will be limited while app is enabled."</string>
    <string name="Reply_message_header">"Don't like our default message, change it here!</string>
    <string name="ReplyMessage">Automatic Reply Message</string>
    <string name="setup_step1of3">"Setup - Step 1 of 3"</string>
    <string name="setup_step2of3">"Setup - Step 2 of 3"</string>
    <string name="setup_step3of3">"Setup - Step 3 of 3"</string>
    <string name="setup_save">"Setup Saved for next time you use Suspend!"</string>
    <string name="setup_agree">"Suspend! Terms and Conditions"</string>
    <string name="step1Info">"Setup your automatic Reply message or use ours below. Tap on the message to edit."</string>
    <string name="Step2_headerQuestion">Which features do you want to set on automatic Reply?</string>
    <string name="Step2Option1">SMS(Texts)</string>
    <string name="Step2Option2">MMS(Picture Messages)</string>
    <string name="Step2Option3">WhatsApp(whatsapp texts)</string>
    <string name="Step2Option4">Phone Calls(Reply/Texts)</string>
    <string name="Step2Option4_text">Reply messages will be sent to mobile callers. If the caller is from a land-line, the app will redirect to voice-mail.</string>
    <string name="step2WhatsAPPInfo">To activate an automatic Reply for your WhatsAPP account, please confirm your username and password.</string>
    <string name="Step2AllSetup">"Great! Your settings are saved. If you want to change any of them please click on the settings button on the Home Screen."</string>
    <string name="Step2Continue2">While Suspend! is active, automatic replies will be sent from the WhatsAPP account and the phone account associated with Suspend!</string>
    <string name="Step2Continue3">Click on Continue to turn on Suspend and start using it now!</string>
    <string name="settingOption1">Reply On/Off</string>
    <string name="settingOption2">Reply On/Off</string>
    <string name="settingOption3">Reply On/Off</string>
    <string name="settingOption4">Reply On/Off</string>
    <string name="space_empty"><br>"   "</br></string>
    <string name="welcome_txt"><b><font color="@string/settingOption1Colour"> Suspend! </font> Distraction Free Driving saves lives!"</b></string>
    <string name="welcome2_txt">This app lets you: setup an automatic reply to let friends and colleagues know you are driving and that you will get back to them later."</string>
    <string name="welcome3_txt"><font color="@string/topHeadFontColour"> Suspend! </font> will not allow texts, WhatsAPPs etc to distract you from driving."</string>
    <string name="WhatsAPPErrorMessage"><b>INFORMATION</b>"WhatsAPP account cannot be configured"</string>
</resources>

