<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/backgroundsuspend" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/top_image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/headersuspend" />
    <TextView android:textSize="20.0dip" android:textColor="@color/topHeadFontColour" android:id="@id/setup_text" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Settings" android:layout_centerHorizontal="true" />
    <Button android:id="@id/button_done" android:background="@layout/btn_done_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" />
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/top_image" android:fadeScrollbars="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/setup_text">
            <TextView android:textSize="17.0dip" android:textColor="@color/settingFontColour" android:id="@id/option1" android:background="@drawable/settingoptionbackgroundsuspend" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settingOption1"  />
            <ScrollView android:id="@id/option1_scrollview" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/option1">
                <RelativeLayout android:id="@id/option1_layout" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/option1">
                    <TextView android:textSize="15.0dip" android:textColor="@color/settingFontColour" android:id="@id/text_header" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2_headerQuestion" />
                    <RelativeLayout android:background="@layout/setting_rounded_box" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/text_header">
                        <TextView android:textSize="17.0dip" android:textColor="@color/settingOption1Colour" android:id="@id/message_text" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option1" />
                        <CheckBox android:id="@id/checkbox_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:button="@layout/btn_checkbox_selector" android:layout_alignParentRight="true" />
                        <ImageView android:id="@id/line1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/message_text" />
                        <TextView android:textSize="17.0dip" android:textColor="@color/black" android:id="@id/mms_text" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option2" android:layout_below="@id/line1" />
                        <CheckBox android:id="@id/checkbox_mms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:button="@layout/btn_checkbox_selector" android:layout_below="@id/line1" android:layout_alignParentRight="true" />
                        <ImageView android:id="@id/line2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/mms_text" />
                        <TextView android:textSize="17.0dip" android:textColor="@color/black" android:id="@id/phone_text" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option4" android:layout_below="@id/line2" />
                        <CheckBox android:id="@id/checkbox_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginRight="5.0dip" android:button="@layout/btn_checkbox_selector" android:layout_below="@id/line2" android:layout_alignParentRight="true" />
                        <TextView android:textSize="13.0dip" android:textColor="@color/settingOption1ExtraColour" android:id="@id/below_phone_text" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option4_text" android:layout_below="@id/phone_text" />
                        <ImageView android:id="@id/line4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/below_phone_text" />
                    </RelativeLayout>
                </RelativeLayout>
            </ScrollView>
            <TextView android:textSize="17.0dip" android:textColor="@color/settingFontColour" android:id="@id/option2" android:background="@drawable/settingoptionbackgroundsuspend" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settingOption2" android:layout_below="@id/option1_scrollview" />
            <RelativeLayout android:id="@id/option2_layout" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/option2">
                <TextView android:textSize="15.0dip" android:textColor="@color/settingFontColour" android:id="@id/text_header" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Tap to edit message." />
                <TextView android:textSize="15.0dip" android:textColor="@color/settingEditMessageColour" android:id="@id/edit_message" android:background="@drawable/step1messagebackgroundsuspend" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/default_message_to_reply" android:layout_below="@id/text_header" />
            </RelativeLayout>
            <TextView android:textSize="17.0dip" android:textColor="@color/settingFontColour" android:id="@id/option3" android:background="@drawable/settingoptionbackgroundsuspend" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settingOption3" android:layout_below="@id/option2_layout" />
            <RelativeLayout android:id="@id/option3_layout" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/option3">
                    <RelativeLayout android:id="@id/option3_layout" android:background="@layout/setting_rounded_box" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="230.0dip" android:layout_marginBottom="20.0dip" >
                    <ListView android:id="@id/contact_list" android:scrollbars="vertical" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/step2linesuspend" />
                    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/contact_list" />
                </RelativeLayout>
            </RelativeLayout>
            <TextView android:textSize="17.0dip" android:textColor="@color/settingFontColour" android:id="@id/option4" android:background="@drawable/settingoptionbackgroundsuspend" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settingOption4" android:layout_below="@id/option3_layout" />
            <RelativeLayout android:id="@id/option4_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/option4" android:layout_centerHorizontal="true">
                <ImageView android:id="@id/image_music" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@layout/image_setting_music_selector" />
                <ImageView android:id="@id/image_navigation" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:src="@layout/image_setting_navigation_selector" android:layout_toRightOf="@id/image_music" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>