<?xml version="1.0" encoding="utf-8"?>
<!-- Una Hennessy d02126371@mydit.ie Semester 2 2015 -->
<!-- use design to see changes to this screen -->
<!-- xml to display drawables -->
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="14.0dip" android:textColor="@color/white" android:id="@id/header_text" android:background="@drawable/musicsuspend_lilac" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Manage Applications" />
        <TextView android:textSize="15.0dip" android:textColor="@color/black" android:id="@id/select_text" android:background="@layout/setting_rounded_box" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/navigation_selection" android:layout_below="@id/header_text" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/comp_layout" android:background="@layout/white_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textSize="14.0dip" android:textColor="@color/black" android:id="@id/msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/navAppNotInstalled" />
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/settingSelectedColour" android:gravity="center" android:id="@id/url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/navUrlList" android:layout_below="@id/msg" />
    </RelativeLayout>
    <ListView android:id="@id/navigation_list" android:scrollbars="vertical" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:listSelector="@color/transparency" />
</LinearLayout>