<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/backgroundsuspend" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="@color/topHeadFontColour" android:gravity="center_horizontal" android:id="@id/setup_text" android:background="@drawable/headersuspend" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Help" />
    <ScrollView android:scrollbars="vertical" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/button_close" android:layout_below="@id/setup_text">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/setup_text">
            <TextView android:textSize="16.0dip" android:textColor="@color/black" android:id="@id/text_help" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpInfo" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/settingSelectedColour" android:gravity="center" android:id="@id/music_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/musicUrlList" android:layout_below="@id/text_help" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/settingSelectedColour" android:gravity="center" android:id="@id/navigation_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/navUrlList" android:layout_below="@id/music_url" />
        </RelativeLayout>
    </ScrollView>
    <Button android:id="@id/button_close" android:background="@layout/btn_help_close_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_marginBottom="10.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>