<?xml version="1.0" encoding="utf-8"?>
<!-- Una Hennessy d02126371@mydit.ie Semester 2 2015 -->
<!-- use design to see changes to this screen -->
<!-- xml to display the setup two  screen -->
<RelativeLayout android:background="@drawable/step2backgroundsuspend" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="@color/topHeadFontColour" android:gravity="center_horizontal" android:id="@id/setup_text" android:background="@drawable/headersuspend" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Setup - Step 2 of 3" />
    <TextView android:textSize="16.0dip" android:textColor="@color/topHeadFontColour" android:id="@id/header_text" android:background="@drawable/headersuspend_lilac" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Step2_headerQuestion" android:layout_below="@id/setup_text" />
    <ScrollView android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header_text">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/header_text">
            <TextView android:textSize="20.0dip" android:textColor="@color/settingFontColour" android:id="@id/message_text" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option1" />
            <CheckBox android:id="@id/checkbox_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:button="@layout/btn_checkbox_selector" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/line1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/message_text" />
             <TextView android:textSize="20.0dip" android:textColor="@color/settingFontColour" android:id="@id/mms_text" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option2" android:layout_below="@id/line1" />
            <CheckBox android:id="@id/checkbox_mms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:button="@layout/btn_checkbox_selector" android:layout_below="@id/line1" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/line2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/mms_text" />
            <TextView android:textSize="20.0dip" android:textColor="@color/settingFontColour" android:id="@id/whatsapp_text" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option3" android:layout_below="@id/line2" />
            <CheckBox android:id="@id/checkbox_whatsapp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:button="@layout/btn_checkbox_selector" android:layout_below="@id/line2" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/line3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/whatsapp_text" />
            <TextView android:textSize="20.0dip" android:textColor="@color/settingFontColour" android:id="@id/phone_text" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option4" android:layout_below="@id/line3" />
            <CheckBox android:id="@id/checkbox_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:button="@layout/btn_checkbox_selector" android:layout_below="@id/line3" android:layout_alignParentRight="true" />
            <TextView android:textSize="15.0dip" android:textColor="@color/settingOption1ExtraColour" android:id="@id/below_phone_text" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Step2Option4_text" android:layout_below="@id/phone_text" />
            <ImageView android:id="@id/line4" android:paddingTop="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/step2linesuspend" android:layout_below="@id/below_phone_text" />
            <Button android:id="@id/button_save" android:background="@layout/btn_continue_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/line4" android:layout_alignParentRight="true" />
            <Button android:id="@id/button_back" android:background="@layout/btn_back_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:layout_toLeftOf="@id/button_save" android:layout_below="@id/line4" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>