<?xml version="1.0" encoding="utf-8"?>
    <!-- Una Hennessy d02126371@mydit.ie Semester 2 2015 -->
    <!-- use design to see changes to this screen -->
    <!-- xml to display drawables -->
<LinearLayout
 android:background="@drawable/backgroundsuspend"
 android:orientation="vertical"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_marginBottom="5.0dip">
 <TextView
  android:textSize="14.0dip"
  android:gravity="center"
  android:textStyle="bold"
  android:textColor="@color/topHeadFontColour"
  android:background="@drawable/headersuspend_lilac"
  android:id="@id/header_text"
  android:padding="5.0dip"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="Manage Applications" />
 <TextView
  android:textSize="15.0dip"
  android:gravity="center"
  android:textStyle="bold"
  android:textColor="@color/topHeadFontColour"
  android:id="@id/select_text"
  android:background="@drawable/headersuspend_lilac"
  android:padding="12.0dip"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_margin="10.0dip"
  android:text="@string/music_selection"
  android:layout_below="@id/header_text" />
</RelativeLayout>
<RelativeLayout
 android:id="@id/comp_layout"
 android:background="@drawable/headersuspend_lilac"
 android:padding="8.0dip"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_margin="10.0dip">
 <TextView
  android:textSize="14.0dip"
  android:gravity="center"
  android:textStyle="bold"
  android:textColor="@color/topHeadFontColour"
  android:id="@id/msg"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/musicAppNotInstalled" />
 <TextView
  android:textSize="14.0dip"
  android:textStyle="bold"
  android:textColor="@color/topHeadFontColour"
  android:gravity="center" android:id="@+id/url"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="10.0dip"
  android:text="@string/musicUrlList"
  android:layout_below="@id/msg" />
</RelativeLayout>
<ListView
 android:textColor="@color/topHeadFontColour"
 android:id="@+id/music_list"
 android:scrollbars="vertical"
 android:fadingEdge="none"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:layout_marginTop="5.0dip"
 android:listSelector="@color/transparency" />
</LinearLayout>