<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="@color/topHeadFontColour" android:gravity="center_horizontal" android:id="@id/setup_text" android:background="@drawable/headersuspend" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Welcome to Suspend!" />
    <RelativeLayout android:background="@drawable/splashscreensuspend" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/setup_text">
        <RelativeLayout android:background="@drawable/welcomeroundededgeboxsuspend" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView android:textSize="14.0dip" android:textColor="@color/settingFontColour" android:id="@id/welcome_text" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_txt" />
            <TextView android:textSize="14.0dip" android:textColor="@color/settingFontColour" android:id="@id/welcome2_text" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome2_txt" android:layout_below="@id/welcome_text" />
            <TextView android:textSize="14.0dip" android:textColor="@color/settingFontColour" android:id="@id/welcome3_text" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome3_txt" android:layout_below="@id/welcome2_text"  />
            <ImageView android:id="@id/line1" android:src="@drawable/linesuspend"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/welcome3_text" />
            <Button android:id="@id/button_continue" android:background="@layout/btn_continue_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/line1" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>